Add basic front-end

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 </head>
 
 <body>
+    <div class="calculator">
+        <div class="display">
+            <div id="previous-operand">0</div>
+            <div id="current-operand">0</div>
+        </div>
+        <button id="all-clear-btn">AC</button>
+        <button id="delete-btn">Delete</button>
+        <button id="1">1</button>
+        <button id="2">2</button>
+        <button id="3">3</button>
+        <button id="add-btn">+</button>
+        <button id="4">4</button>
+        <button id="5">5</button>
+        <button id="6">6</button>
+        <button id="sub-btn">-</button>
+        <button id="7">7</button>
+        <button id="8">8</button>
+        <button id="9">9</button>
+        <button id="multiply-btn">*</button>
+        <button id="decimal-btn">.</button>
+        <button id="0">0</button>
+        <button id="equals-btn">=</button>
+        <button id="divide-btn">/</button>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 
