--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             <div id="current-operand">0</div>
         </div>
         <button id="all-clear-btn">AC</button>
-        <button id="delete-btn">Delete</button>
-        <button id="1">1</button>
-        <button id="2">2</button>
-        <button id="3">3</button>
-        <button id="add-btn">+</button>
-        <button id="4">4</button>
-        <button id="5">5</button>
-        <button id="6">6</button>
-        <button id="sub-btn">-</button>
-        <button id="7">7</button>
-        <button id="8">8</button>
-        <button id="9">9</button>
-        <button id="multiply-btn">*</button>
+        <button id="delete-btn">DEL</button>
+        <button class="operand" id="1">1</button>
+        <button class="operand" id="2">2</button>
+        <button class="operand" id="3">3</button>
+        <button class="operation" id="add-btn">+</button>
+        <button class="operand" id="4">4</button>
+        <button class="operand" id="5">5</button>
+        <button class="operand" id="6">6</button>
+        <button class="operation" id="sub-btn">-</button>
+        <button class="operand" id="7">7</button>
+        <button class="operand" id="8">8</button>
+        <button class="operand" id="9">9</button>
+        <button class="operation" id="multiply-btn">*</button>
         <button id="decimal-btn">.</button>
-        <button id="0">0</button>
+        <button class="operand" id="0">0</button>
         <button id="equals-btn">=</button>
-        <button id="divide-btn">/</button>
+        <button class="operation" id="divide-btn">/</button>
     </div>
 
     <script src="./app.js"></script>
