Add clear function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <div id="previous-operand">0</div>
-            <div id="current-operand">0</div>
+            <div id="previous-operand"></div>
+            <div id="current-operand"></div>
         </div>
         <button id="all-clear-btn">AC</button>
         <button id="delete-btn">DEL</button>
