--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="operand" id="8">8</button>
         <button class="operand" id="9">9</button>
         <button class="operation" id="multiply-btn">*</button>
-        <button id="decimal-btn">.</button>
+        <button class="operand" id="decimal-btn">.</button>
         <button class="operand" id="0">0</button>
         <button id="equals-btn">=</button>
         <button class="operation" id="divide-btn">/</button>
