--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="operand" id="7">7</button>
         <button class="operand" id="8">8</button>
         <button class="operand" id="9">9</button>
-        <button class="operation" id="multiply-btn">*</button>
+        <button class="operation" id="multiply-btn">x</button>
         <button class="operand" id="decimal-btn">.</button>
         <button class="operand" id="0">0</button>
         <button id="equals-btn">=</button>
